--- a/root.css
+++ b/root.css
@@ -1,6 +1,19 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 body {
     /* width: 1446px; */
+    height: 100vh;
     background-color: antiquewhite;
+    margin: auto;
+}
+
+.container-principal{
+    width: 600px;
     margin: auto;
 }
 
