--- a/style.css
+++ b/style.css
@@ -4,30 +4,49 @@
     align-items: center;
 }
 
+img{
+    width: 50%;
+}
+
 .item-1{
+    grid-area: fabiana;
     background-color: blue;
 }
 
 .item-2{
+    grid-area: carla;
     background-color: rgb(0, 255, 85);
 }
 
 .item-3{
+    grid-area: tania;
     background-color: rgb(255, 0, 200);
 }
 
 .item-4{
+    grid-area: felipa;
     background-color: rgb(75, 191, 236);
 }
 
 .item-5{
+    grid-area: titia;
     background-color: rgb(224, 66, 93);
 }
 
 .item-6{
+    grid-area: joana;
     background-color: rgb(207, 124, 16);
 }
 
 .item-7{
+    grid-area: neuza;
     background-color: rgb(51, 71, 44);
+}
+
+.container{
+display: grid;
+grid:
+"fabiana fabiana carla"
+"tania felipa carla"
+"titia joana neuza";
 }
