--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ img{
 
 .primeira-img{
     width: 100%;
+    height: 100%;
 }
 
 .item-1{
@@ -22,19 +23,42 @@ img{
 
 
 .item-2{
+
+    font-family: 'Regular';
+    padding: 15px;
     grid-area: carla;
-    background-color: rgb(0, 255, 85);
+    color: white;
+background-color: var(--cor5);
 }
+.item-2 h1{
+    color: var(--cor0);
+    margin-bottom: 20px;
+}
+
+.item-2 h5{
+    margin-bottom: 10px;
+    
+}
+
+.item-2 p{
+    margin-bottom: 20px;
+    color: var(--cor3);
+    font-family: '';
+}
+
 
 .item-3{
     grid-area: tania;
     background-color: rgb(255, 0, 200);
+    line-height: 40px;
+
 }
 strong{
     font-size: 3rem;
     font-family: 'Extra-bold';
     width: 300px;
     display: block;
+    
     /* background-color: aliceblue; */
     
 }
@@ -43,17 +67,20 @@ strong{
     grid-area: felipa;
     background-color: rgb(75, 191, 236);
     font-family: 'Variable';
+    font-size: 11px;
+    text-align: justify;
 }
 .btn{
     display: block;
     border: 1px solid black;
-    padding: px;
+    padding: 10px;
     width: 150px;
     background-color: var(--cor1);  
     text-align: center;
 }
 .p{
     margin-bottom: 56px;
+    
 }
 a{
     text-decoration: none;
